# timedelta-isoformat

./: .gitignore  README.rst  pyproject.toml
src/timedelta_isoformat/: __init__.py
tests/: test_timedelta_algebra.py  test_timedelta_isoformat.py
tests/benchmarks/: test_benchmark.py
